<resources>
    <string name="app_name">Jetpack Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_anime">Welcome To Anime</string>
    <string name="enter_the_anime_details">ENTER THE ANIME DETAILS</string>
    <string name="name">NAME:</string>
    <string name="enter_the_anime_name">Enter the anime name.</string>
    <string name="description">DESCRIPTION:</string>
    <string name="enter_the_description">Enter the Description.</string>
    <string name="rating">RATING:</string>
    <string name="enter_the_total_rating">Enter the total rating</string>
    <string name="submit">SUBMIT</string>
    <string name="thank_you">THANK YOU</string>
    <string name="home">HOME</string>
    <string name="retry">RETRY</string>
    <string name="want_to_add_more">Want to Add More?</string>
    <string name="share">Share</string>
    <string name="share_success_text">Here all the anime details are available</string>
    <string name="about">About</string>
    <string name="about_description">This app is about demonstrating the Android Jetpack Navigation ,where we are developing a anime theme app where the user can enter the detail of their anime and provide the rating.</string>
    <string name="developer_description">Hi, I am currently working on android and web projects. I really love to join your team as a developer so that I can contribute to the Project.</string>
    <string name="developer_name">Zidan Ali</string>
    <string name="developer">Developer</string>
</resources>